# gmail_mcp

./: .env.example  LICENSE  MESSAGE_FORMATS.md  README.md  main.py  pyproject.toml  requirements.txt  start_dev_server.py  start_server.py
.github/workflows/: Gmail-MCP.yaml
gmail_mcp/: __init__.py  dependencies.py
gmail_mcp/auth/: __init__.py  auth.py
gmail_mcp/core/: __init__.py  config.py
gmail_mcp/models/: __init__.py  models.py
gmail_mcp/services/: __init__.py  gmail_service.py
gmail_mcp/tools/: __init__.py  advanced.py  management.py  reading.py
service_example/: get_access_token.py  service_functions_test.py
